--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+        android:theme="@style/AppTheme">
+        <!--android:theme="@android:style/Theme.NoTitleBar.Fullscreen">-->
         <activity
             android:name=".Login.LoginActivity"
             android:label="@string/app_name">
@@ -25,23 +26,21 @@
         </activity>
         <activity
             android:name=".Login.RegisterActivity"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:launchMode="singleInstance">
         </activity>
         <activity
             android:name=".Home.HomeActivity"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:launchMode="singleInstance">
         </activity>
-        <activity android:name=".Search.SearchUserActivity"></activity>
+        <activity
+            android:name=".Search.SearchUserActivity"
+            android:launchMode="singleInstance">
+        </activity>
+        <activity
+            android:name=".Profile.ProfileActivity"
+            android:launchMode="singleInstance">
+
+        </activity>
     </application>
 
 </manifest>
