--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:anyDensity="true">
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.example.misaka.photoapplication"
+            android:grantUriPermissions="true"
+            android:exported="false">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/update_files" />
+        </provider>
+
         <!--android:theme="@android:style/Theme.NoTitleBar.Fullscreen">-->
         <activity
             android:name=".Login.LoginActivity"
@@ -47,7 +58,12 @@
         </activity>
         <activity
             android:name=".Share.ShareActivity"
-            android:launchMode="singleInstance">
+            android:launchMode="standard">
+
+        </activity>
+        <activity
+            android:name=".Share.ProcessActivity"
+            android:launchMode="standard">
 
         </activity>
     </application>
