--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
         </activity>
         <activity
             android:name=".Profile.ProfileActivity"
-            android:launchMode="singleInstance">
+            android:launchMode="standard">
 
         </activity>
         <activity
